src/pages/Ranking/styles.css
.ranking {
  align-items: center;
  background-color: #1a1a1b;
  display: flex;
  flex-direction: column;
  text-align: center;
  min-height: 100vh;
}

.Tabs {
  width: 80%;
  padding: 2rem 1rem;
  color: #e8f0f2;
  font-weight: 800;
}

.react-tabs {
  -webkit-tap-highlight-color: transparent;
}

.react-tabs__tab-list {
  width: 60%;
  margin: 0 auto 2rem;
  display: flex;
  align-items: center;
  justify-content: space-between;
  border: 1px solid #30602c;
  border-radius: 2rem;
  padding-left: 0;
}

.react-tabs__tab {
  width: 50%;
  padding: 1rem;
  list-style: none;
  text-align: center;
  cursor: pointer;
  transition: all 0.7s;
  bottom: 0;
}

.react-tabs__tab--selected {
  background: #538d4e;
  border-color: #538d4e;
  color: white;
}

.react-tabs__tab--disabled {
  color: grey;
  cursor: default;
}

.react-tabs__tab:hover {
  background: rgba(48, 96, 44, 0.75);
}

.react-tabs__tab:first-child {
  border-bottom-left-radius: 2rem;
  border-top-left-radius: 2rem;
}

.react-tabs__tab:last-child {
  border-bottom-right-radius: 2rem;
  border-top-right-radius: 2rem;
}

.react-tabs__tab-panel--selected {
  display: block;
  text-align: center;
}

.react-tabs__tab:focus:after {
  background: transparent;
}

.daily-data-words {
  opacity: 0;
  transition: height 0.7s, opacity 0.7s;
}

.daily-data-word-container {
  display: flex;
  justify-content: center;
}

.daily-data-word {
  border-radius: 10px;
  margin: 5px;
  padding: 5px 10px;
}

.daily-data-words.isExpanded {
  opacity: 1;
}

